--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
-psycopg2==2.9.10
+#psycopg2==2.9.10
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 pytz==2024.2
